# pidgeon-post

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
.github/: settings.yml
.github/workflows/: chat-api.yml  chat-app.yml  chat-cli.yml  chat-server.yml  quickstart.yml
chat-api/: Cargo.toml  Dockerfile
chat-api/migrations/: 20231018032659_init.down.sql  20231018032659_init.up.sql
chat-api/src/: main.rs
chat-api/src/common/: database.rs  mod.rs  router.rs  runtime.rs
chat-api/src/controller/: messages.rs
chat-api/src/handler/: messages.rs
chat-api/src/model/: messages.rs
chat-app/: LICENSE-MIT  README.md  index.html  index.scss
chat-app/src/: app.rs
chat-cli/: Cargo.toml
chat-server/: Cargo.toml
chat-server/src/: main.rs
