[package]
name = "chat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
anyhow = "1.0.75"
axum-macros = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
